--- a/package.json
+++ b/package.json
@@ -15,11 +15,16 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
+    "fs": "^0.0.1-security",
     "next": "13.4.5",
+    "pdf-convert-js": "^1.0.7",
     "pdf-lib": "^1.17.1",
+    "pdf2pic": "^2.2.1",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-pdf": "^7.1.2",
+    "spawn-sync": "^2.0.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
   }
