--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
     "autoprefixer": "10.4.14",
+    "body-parser": "^1.20.2",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
     "fs": "^0.0.1-security",
