--- a/package.json
+++ b/package.json
@@ -13,11 +13,16 @@
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "body-parser": "^1.20.2",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
+    "express": "^4.18.2",
     "fs": "^0.0.1-security",
+    "html-pdf": "^3.0.1",
+    "mammoth": "^1.6.0",
     "next": "13.4.5",
+    "path": "^0.12.7",
     "pdf-convert-js": "^1.0.7",
     "pdf-lib": "^1.17.1",
     "postcss": "8.4.24",
@@ -26,6 +31,12 @@
     "react-pdf": "^7.1.2",
     "spawn-sync": "^2.0.0",
     "tailwindcss": "3.3.2",
-    "typescript": "5.1.3"
+    "typescript": "5.1.3",
+    "util": "^0.12.5"
+  },
+  "devDependencies": {
+    "@types/body-parser": "^1.19.2",
+    "@types/express": "^4.17.17",
+    "@types/html-pdf": "^3.0.0"
   }
 }
